--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "dotenv": "^16.4.1",
-    "ethers": "^6.10.0",
+    "ethers": "5.7.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
